update filename of example attachment

--- a/Tweemail Demo Notebook.ipynb
+++ b/Tweemail Demo Notebook.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "attachment_filepath = r'images\\Hello World.png'\n",
+    "attachment_filepath = r'images\\hello_world.png'\n",
     "\n",
     "msg.attach_files(attachment_filepath)\n",
     "\n",
