add example showing how to set parts individually, change example attachment

--- a/demo/Demo Notebook.ipynb
+++ b/demo/Demo Notebook.ipynb
@@ -86,9 +86,42 @@
     }
    ],
    "source": [
-    "attachment_filepath = r'images\\hello_world.png'\n",
+    "filepath = r'example_attachment.txt'  # Insert your attachment filepath here\n",
     "\n",
-    "msg.attach_files(attachment_filepath)\n",
+    "msg.attach_files(filepath)\n",
+    "\n",
+    "msg.send()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In case you can't set everything all at once, you can set and attach pieces individually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email sent to: thomas.webb@dnv.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = Email()\n",
+    "\n",
+    "msg.set_sender(sender)\n",
+    "msg.set_recipients(recipients)\n",
+    "msg.set_subject(subject)\n",
+    "msg.attach_body(html_body)\n",
+    "msg.set_host(host)\n",
+    "msg.set_port(port)\n",
     "\n",
     "msg.send()"
    ]
