--- a/demo/Demo Notebook.ipynb
+++ b/demo/Demo Notebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# tweemail\n",
-    "tweemail provides the `Email` class, which can be used to easily send emails over an SMTP connection."
+    "tweemail provides an `Email` class, which can be used to easily send emails over an SMTP connection."
    ]
   },
   {
